add daily task for pronouciation activity

--- a/app/src/main/res/layout/item_daily_task.xml
+++ b/app/src/main/res/layout/item_daily_task.xml
@@ -22,5 +22,6 @@
         android:text="Đi tới"
         android:textAllCaps="false"
         android:backgroundTint="@color/teal_700"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:enabled="true" />
 </LinearLayout>
