--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,12 +8,21 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.lingobuddypck.ui.home.HomeFragment"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_saved_words"
+            app:destination="@id/navigation_saved_words"
+            app:popUpToInclusive="true"/>
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_saved_words"
         android:name="com.example.lingobuddypck.ui.dictionary.SavedWordsFragment"
-        tools:layout="@layout/fragment_saved_words" />
+        tools:layout="@layout/fragment_saved_words" >
+        <action
+            android:id="@+id/action_navigation_saved_words_to_navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
